// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DoesNotExist /> rendering should render correctly custom 404 page with props 1`] = `
<div
  className="container content"
  id="not-foud-404"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <div
          className="row owisp-404-row-1"
        >
          404
        </div>
        <div
          className="row owisp-404-row-2"
        >
          Not Found
        </div>
        <div
          className="row owisp-404-row-3"
        >
          Sorry, we couldn't find the page you were looking for.
        </div>
        <div
          className="row owisp-404-row-4"
        >
          <Link
            className="link"
            to="/default"
          >
            Go back to homepage
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DoesNotExist /> rendering should render correctly default 404 page without props 1`] = `
<div
  className="container content"
  id="not-foud-404"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <div
          className="row owisp-404-row-1"
        >
          Oops!
        </div>
        <div
          className="row owisp-404-row-2"
        >
          404 Not Found
        </div>
        <div
          className="row owisp-404-row-3"
        >
          Sorry, an error has occurred, Requested page not found!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DoesNotExist /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="not-foud-404"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <div
        className="inner"
      >
        <div
          className="row owisp-404-row-1"
        >
          404_H
        </div>
        <div
          className="row owisp-404-row-2"
        >
          404_SUBH
        </div>
        <div
          className="row owisp-404-row-3"
        >
          404_MESSAGE
        </div>
        <div
          className="row owisp-404-row-4"
        >
          <Link
            className="link"
            to="/default"
          >
            HOME_PG_LINK_TXT
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
